# UTCTF-21

beginner-crypto-various-vernacular/: flag.txt  prompt.md
crypto-a-bit-weird/: README.md  secret.py
crypto-cilly-beef-code/: Cargo.toml  Dockerfile  docker-compose.yml  prompt.md  solution.py
crypto-cilly-beef-code/src/: lib.rs  main.rs
crypto-cilly-beef-code/src/env/: var_error_wrapper.rs
crypto-cilly-beef-code/src/globals/: debug_defaults.rs  release_defaults.rs  varnames.rs
crypto-delphi/: Cargo.toml  Dockerfile  docker-compose.yml  prompt.md  solution.py
crypto-prove-no-knowledge/: Cargo.toml  Dockerfile  docker-compose.yml  pompt.md  solution.py
crypto-prove-no-knowledge/src/: lib.rs  main.rs
crypto-prove-no-knowledge/src/globals/: debug_defaults.rs  mod.rs  release_defaults.rs  varnames.rs
crypto-stretchy-mac/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  prompt.md
crypto-stretchy-mac-solution/: Cargo.toml  README.md  build.rs  rustfmt.toml
crypto-stretchy-mac-solution/src/: lib.rs  main.rs
crypto-stretchy-mac-solution/src/c/: Makefile  kernel.cl  opencl_attack.c  opencl_attack.h  opencl_helper.c  opencl_helper.h  openssl_attack.c  openssl_attack.h  private_sha224_length_extension_attack.c  private_sha224_length_extension_attack.h  sha224_length_extension_attack.c  sha224_length_extension_attack.h
crypto-stretchy-mac/src/: lib.rs  main.rs
crypto-stretchy-mac/src/config/: errors.rs  mod.rs
crypto-stretchy-mac/src/globals/: debug_defaults.rs  release_defaults.rs  varnames.rs
forensics-deleted-data/: README.md  flag.txt  prompt.md
forensics-osint/: Dockerfile  README.md  changelog.txt  docker-compose.yml  flag.txt  index.html  inner-page.html  portfolio-details.html  prompt.md
forensics-osint-p2/: README.md  flag.txt  prompt.md
forensics-sandwiched-file/: README.md  flag.txt  prompt.md  solve.py
forensics-smol-data/: gen_anomaly_detect.ipynb  solve_anomaly_detect.ipynb
misc-emoji/: README.md  flag.txt  prompt.md
misc-python-shell/: Cargo.toml  Dockerfile  docker-compose.yml  flag.txt  prompt.md
misc-python-shell/src/: lib.rs  main.rs
misc-python-shell/src/env/: mod.rs
misc-python-shell/src/globals/: debug_defaults.rs  release_defaults.rs  varnames.rs
network-Be-My-Guest/: Dockerfile  README.md  docker-compose.yml  flag.txt  prompt.md  smb.conf
networking-bobs-box/: README.md
networking-please-thank-you/: docker-compose.yml  prompt.md
networking-please-thank-you/backend/: Cargo.toml  Dockerfile
networking-please-thank-you/backend/src/: lib.rs  main.rs  rejection.html
networking-please-thank-you/backend/src/globals/: debug_defaults.rs  release_defaults.rs  varnames.rs
reversing-utctf-adventure-rom-3/: Makefile  character.h  debug.h  font.h  game.c  game.h  grass.h  key.h  main.c  maze.h  maze.txt  text.c  text.h  wall.h
virtual-machine-monitor/: README.md  a.out  algo.c  cache_vector.py  prompt.md  solution.py
web-cookie-clicker/: Dockerfile  README.md  app.py  docker-compose.yml  flag.txt  prompt.md
web-fastfox/: README.md  (+1 more)
(+59 files in other folders)
