cargo-features = ["strip"]

[package]
name = "prove_no_knowledge"
version = "0.1.0"
authors = ["Soham Roy <sohamroy@sohamroy.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
tokio = { version = "1.2", features = ["macros", "time", "rt", "rt-multi-thread", "net", "io-util", ] }
num-bigint = { version = "0.4", features = ["rand"] }
rand = "0.8"

[profile.release]
strip = "symbols"
lto = true
