cargo-features = ["strip"]

[package]
name = "stretchy_mac_solution"
version = "0.1.0"
authors = ["Soham Roy <sohamroy@sohamroy.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2", features = ["macros", "rt", "rt-multi-thread", "net", "io-util", ] }
hex = "0.4"

[profile.release]
strip = "symbols"
lto = true
