cargo-features = ["strip"]

[package]
name = "stretchy_mac"
version = "0.1.0"
authors = ["Soham Roy <sohamroy@sohamroy.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
tokio = { version = "1.2", features = ["macros", "time", "rt", "rt-multi-thread", "net", "io-util", ] }
rust-crypto = "0.2.36"
sodiumoxide = "0.2"

[profile.release]
strip = "symbols"
lto = true
