cargo-features = ["strip"]

[package]
name = "please_thank_you"
version = "0.1.0"
authors = ["Soham Roy <sohamroy@sohamroy.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
rocket = "0.4"

[profile.release]
strip = "symbols"
lto = true
